[tool.poetry]
name = "pyrogue"
version = "0.1.0"
description = ""
authors = ["TravisAucoin <travis_aucoin@stuller.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tcod = "^13.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
